# np2hw

./: .gitignore  LICENSE  README.md  pyproject.toml
design/: 01-streaming-model.md  02-stream-array-tracing.md  03-hash-cons-delay-lines.md  04-bitwidth-tracking.md  05-isp-operation-library.md  06-zeroasic-integration.md  07-prior-art.md
docs/: api.md  backends.md  cli.md  framing-and-resolution.md  install.md  interfaces.md  parameters.md  streaming-and-bitwidths.md  supported-ops.md  view.md  writing-models.md  zeroasic.md
examples/: _harness.py  active_width.py  awb.py  axi_video.py  bypass.py  compose_11.py  compose_box.py  control.py  dtype_faithful.py  dynamic_res.py  edges.py  eof_framing.py  ir_blur.py  mixed_width.py  numpy_to_ir.py  prog_kernel.py  raw12.py  sobel.py  switchboard.py  verilog_blur.py
examples/isp/: blur.py  gain.py  gaussian.py  multi_param.py  sharpen.py
src/np2hw/: __init__.py  cli.py  frontend.py  ir.py  verilog.py  view.py
src/np2hw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
